# ItConnect

./: CMakeLists.txt  DlgSelProject.cpp  DlgSelProject.h  DlgSelProject.ui  DlgSelSkills.cpp  DlgSelSkills.h  DlgSelSkills.ui  InitDataBase.h  ItemSkill.cpp  ItemSkill.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Project.cpp  Project.h  README.md  User.cpp  User.h  WgtProject.cpp  WgtProject.h  WgtProject.ui  WgtProject1.ui  WgtWorker.cpp  WgtWorker.h  WgtWorker.ui  main.cpp  util.h
database/: database.db  database1.db  database2.db
icons/: icons.qrc
important/: ItConnect v1.qss
themes/: ItConnect — копия.qss  ItConnect.qss  ItConnect_dark.qss  ItConnect_dark_green.qss  ItConnect_dark_grey.qss  ItConnect_dark_pic.qss  themes.qrc
